--- a/introdemo/src/App.css
+++ b/introdemo/src/App.css
@@ -6,8 +6,98 @@ body {
     font-size: 40px;
     color :aqua;
     font-family: 'Bebas Neue', Arial, sans-serif;
+    margin-left: 30px;
 }
 .p{
-    text-align: center; /* Esto centra solo el texto */
+    font-size: 25px;
+    margin-left: 30px;
+    color: white;
+    font-family: 'Bebas Neue', Arial, sans-serif;
+
+}
+.ñ{
+    font-size: 25px;
+    margin-left: 30px;
+    color: rgb(180, 4, 4);
+    font-family: 'Bebas Neue', Arial, sans-serif;
+    background-color: rgb(219, 124, 0);
+
+}
+ .ñ:active  {
+    transform: scale(0.95);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+} 
+ .ñ:hover {
+    color: rgb(24, 24, 24);
+    box-shadow: 0 0 20px 5px rgb(203, 203, 181); /* Efecto de brillo amarillo */
+    filter: brightness(1.2);         /* Hace el botón más brillante */
+    cursor: pointer;
+    transition: box-shadow 0.2s, filter 0.2s;
+
+}
+.x{
+    font-size: 25px;
+    font-weight: 100px; /* O usa un número como 700 para más grosor */
+
+    margin-left: 30px;
+    color: rgb(180, 4, 4);
+    font-family: 'Bebas Neue', Arial, sans-serif;
+    background-color: rgb(31, 31, 31);
+    padding: 10px;
+    width: 26;
+}
+ .x:active  {
+    transform: scale(0.95);
+    box-shadow: 0 2px 4px rgba(255, 141, 141, 0.3);
+} 
+ .x:hover {
+    color: rgb(255, 0, 0);
+    box-shadow: 0 0 20px 5px rgb(203, 203, 181); /* Efecto de brillo amarillo */
+    filter: brightness(1.2);         /* Hace el botón más brillante */
+    cursor: pointer;
+    transition: box-shadow 0.2s, filter 0.2s;
+}
+
+.h2{
+    font-size: 40px;
+    color :aqua;
+    font-family: 'Bebas Neue', Arial, sans-serif;
+    margin-left: 30px;
+    margin-top: 80px;
+}
+
+.j{
+    font-size: 25px;
+    margin-left: 30px;
+    color: white;
+    font-family: 'Bebas Neue', Arial, sans-serif;
+}
+
+.j1{
+     font-size: 25px;
+    margin-left: 30px;
+    color: rgb(44, 84, 4);
+    font-family: 'Bebas Neue', Arial, sans-serif;
+}
+
+.input{
+    font-size: 25px;
+    margin-left: 30px;
+    margin-top: 70px;
+    color: white;
+    font-family: 'Bebas Neue', Arial, sans-serif;
+    background-color: rgb(31, 31, 31);
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    width: 999px;
+}
+.px{
+    font-size: 25px;
+    margin-left: 30px;
+    color: white;
+    margin-top: 50px;
+    font-family: 'Bebas Neue', Arial, sans-serif;
+
 }
 
